[package]
name = "nes"
version = "0.1.0"
edition = "2021"

[lib]
name = "nes_backend"
path = "src/backend/lib.rs"

[[bin]]
name = "nes"
path = "src/frontend/main.rs"

[dependencies]
toml = { version = "0.8", features = ["parse", "display"] }
zip = "3.0"
cpal = "0.15"
ctrlc = "3.4"
dasp = { version = "0.11", features = ["signal", "interpolate", "interpolate-floor"] }
minifb = "0.28"
rand = "0.9"
