[package]
name = "nes"
version = "0.1.0"
edition = "2021"

[lib]
name = "nes_backend"
path = "src/backend/lib.rs"

[[bin]]
name = "nes"
path = "src/frontend/main.rs"

[dependencies]
cpal = "0.16"
ctrlc = "3.4"
dasp = { version = "0.11", features = ["signal", "interpolate", "interpolate-floor"] }
dyn-clone = "1.0"
minifb = "0.28"
rand = "0.9"
rmp-serde = "1.3"
serde = { version = "1.0", features = ["derive"] }
serde_bytes = "0.11"
typetag = "0.2"
zip = "3.0"
